@@ -665,6 +665,7 @@ DRIVERNV(stargat1)      //                Stargate (rev.1)
 DRIVERNV(stargat2)      //                Stargate (rev.2)
 DRIVERNV(stargat3)      //                Stargate (rev.3)
 DRIVERNV(stargat4)      //                Stargate (rev.4)
+DRIVERNV(stargat5)      //                Stargate (rev.5)
 DRIVERNV(bighurt)       //S3-743:   06/95 Big Hurt (rev.3)
 DRIVERNV(snspares)      //S3-N111:  10/95 Strikes N' Spares (rev.6)
 DRIVERNV(snspare1)      //                Strikes N' Spares (rev.1)
