@@ -14,13 +14,14 @@ Improved GTS80BS/GTS3 DAC sound core
 Improved GTS80SS DAC sound core (Haunted House, Black Hole, Mars God of War, etc)
 Improved DMD brightness level mapping for Gottlieb GTS3s
 
-*** ROM SUPPORT *** Thanks to Timmo, Chad Hendrickson
+*** ROM SUPPORT *** Thanks to Timmo, Chad Hendrickson, Inkochnito
 Kinda new:
 Star Wars 20th Anniversary 1.06
 Tommy 5.00 (unofficial MOD)
 
 Clones:
 Laser Cue L-3 (Neverending Bell Fix)
+Stargate rev. 5
 
 
 
